# deepcut

./: .buildinfo  .gitignore  README.md  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree
_sources/: index.md
docs/: conf.py  index.md
src/deepcut/: __init__.py  deepcut.py  odas_get_profiles.py
src/profinder/: __init__.py  profinder.py
tests/: test_deepcut.py
tests/data/: rbr_pressure.csv
