[project]
name = "deepcut"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jesse Cusack", email = "jesse.cusack@oregonstate.edu" }
]
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.3.2",
    "scipy>=1.16.1",
]

[project.scripts]
deepcut = "deepcut:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "pytest>=8.4.1",
    "ruff>=0.12.8",
    "scipy-stubs>=1.16.1.0",
]
